--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -76,4 +76,4 @@ RoxygenNote: 6.0.1
 Roxygen: list(markdown = TRUE, roclets = c("rd", "namespace", "collate"))
 Remotes:
     tidyverse/glue,
-    hadley/dplyr
+    tidyverse/dplyr
